# TUKLAS-Detection

./: app.py  pyproject.toml
