[project]
name = "tuklas-app"
version = "0.1.0"
description = "Pig Skin Lesion Detection"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "opencv-python-headless",
    "ultralytics",
    "streamlit-lottie",
    "requests",
    "fpdf",
    "pillow",
    "streamlit-mic-recorder",  # <--- NEW: For Microphone Button
    "SpeechRecognition",       # <--- NEW: For Voice Command Processing
]

[tool.poetry]
package-mode = false
